feat: Implementing Inventory Dragging and Item Info Window